name:                excapade
version:             0.1.0.0
synopsis:            exploit development tools
description:         ^^^^^^^
license:             PublicDomain
license-file:        LICENSE
author:              bsmt
maintainer:          bsmt@krax.in
copyright:           ur mum
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Excapade.DeBruijn, Excapade.Interact
  build-depends:       base >=4.8 && <4.9, process, vector
  default-language:    Haskell2010

executable stackmap
  main-is:             bin/stackmap.hs
  build-depends:       base >=4.8 && <4.9, vector, excapade, binary, bytestring